feat: daily transaction query
