# src/user-transactions/user-transactions.controller.ts
@@ -14,7 +14,7 @@ import { AdminGuard } from 'src/auth/guards/admin.guard';
 import { Roles } from 'src/auth/decorator/roles.decorator';
 import { Role } from 'src/enum/role';
 import { JwtAuthGuard } from 'src/auth/guards/jwt-auth.guard';
-import { ApiOperation, ApiTags } from '@nestjs/swagger';
+import { ApiBearerAuth, ApiOperation, ApiTags } from '@nestjs/swagger';
 
 @Controller('user-transactions')
 @ApiTags('User Transactions')
@@ -26,21 +26,26 @@ export class UserTransactionsController {
   @Get()
   @UseGuards(JwtAuthGuard, AdminGuard)
   @Roles(Role.ADMIN)
+  @ApiBearerAuth('JWT-auth')
+  @ApiOperation({ summary: 'Get all user transactions' })
   findAll() {
     return this.userTransactionsService.findAll();
   }
 
   @Get(':id')
+  @ApiBearerAuth('JWT-auth')
   @UseGuards(JwtAuthGuard)
   @ApiOperation({ summary: 'Get user transaction by id' })
   findOne(@Param('id') id: string, @Request() req) {
     return this.userTransactionsService.findOne(+id, req.user.sub);
   }
 
-  @Get('user')
+  @Get('user/me')
   @UseGuards(JwtAuthGuard)
-  @ApiOperation({ summary: 'Get user transactions by user id' })
-  findByUserId(@Param('id') id: string, @Request() req) {
-    return this.userTransactionsService.findByUserId(req.user.sub);
+  @ApiBearerAuth('JWT-auth')
+  @ApiOperation({ summary: 'Get all user transactions' })
+  findAllUserTransactions(@Request() req) {
+    // console.log(req.user.sub);
+    return this.userTransactionsService.findAllUserTransactions(req.user.sub);
   }
 }
